# rnn-lite

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml  format_files.sh  travis.sh
include/rnnlite/activation/: elu.hpp  identity.hpp  leaky_relu.hpp  logistic.hpp  relu.hpp  selu.hpp  softsign.hpp  tanh.hpp
include/rnnlite/core/: connect.hpp  edge.hpp  layer.hpp  matrix.hpp  neuron.hpp  node.hpp  tensor.hpp  tensor_descriptor.hpp  tensor_map.hpp  tensor_ref.hpp  unique_id.hpp  vector.hpp
include/rnnlite/loss/: absolute.hpp  cross_entropy.hpp  cross_entropy_multiclass.hpp  mse.hpp
include/rnnlite/optimizer/: adagrad_optimizer.hpp  adamax_optimizer.hpp  momentum_optimizer.hpp  nesterov_optimizer.hpp  optimizer_cache.hpp  rmsprop_optimizer.hpp  sgd_optimizer.hpp
include/rnnlite/types/: matrix.hpp  tensor.hpp  tensor_map.hpp  tensor_ref.hpp
include/rnnlite/util/: derivative.hpp  limits.hpp  math.hpp  random.hpp
include/rnnlite/weight/: constant_weight_initializer.hpp  gaussian_weight_initializer.hpp  glorot_weight_initializer.hpp  he_weight_initializer.hpp  lecun_weight_initializer.hpp
test/: CMakeLists.txt  testing_gtest.cpp
test/activation/: testing_logistic.cpp  testing_rectifier.cpp  testing_softsign.cpp  testing_tanh.cpp
test/core/: testing_edge.cpp  testing_layer.cpp  testing_node.cpp  testing_tensor.cpp  testing_tensor_map.cpp
test/loss/: testing_absolute.cpp  testing_cross_entropy.cpp  testing_cross_entropy_multiclass.cpp  testing_mse.cpp
test/optimizer/: testing_optimizer.cpp
